--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build/client"
   },
   "dependencies": {
     "@react-router/node": "^7.4.1",
@@ -27,13 +26,13 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.17",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
-    "vite-plugin-gh-pages": "^1.0.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
